# USBMonitor-cpp

./: .gitignore  CMakeLists.txt  README.md
docs/: build.md
examples/: Qt-usb-monitor.cpp  usb-monitor.cpp
examples/console/: main.cpp
examples/qt-gui/: main.cpp
include/: USBMonitor.h
include/mac/: macUSBMonitor.cpp  macUSBMonitor.h
include/unix/: unixUSBMonitor.h
include/win/: winUSBMonitor.h
src/: USBMonitor.cpp
